refactor: rename metadata.Metadata to orderid.OrderId
Reason to rename is to make intent more clear. It did not and never did
represent additional and/or optional metadata as the name implied.
